SG-1259 - fix step label alignment (#757)
* SG-1259 - fix step label alignment

* SG-1259 - use the right syntax

--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-process-step.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-process-step.scss
@@ -7,10 +7,10 @@
   }
   h3 {
     @include fs-title-3-mobile;
-    margin-bottom: 10px;
+    margin: 0 0 10px;
     @include media($sbs-breakpoint) {
       @include fs-title-4;
-      margin-bottom: 20px;
+      margin: 0 0 20px;
     }
   }
   p {
